--- a/views/base_layout.twig
+++ b/views/base_layout.twig
@@ -30,7 +30,7 @@
 
 </div>
 {% block javascripts %}
-    <script src="/js/jquery-3.1.1.js"></script>
+    <script src="/js/jquery-3.1.1.min.js"></script>
     <script src="/js/bootstrap.js"></script>
 {% endblock %}
 </body>
