--- a/views/base_layout.twig
+++ b/views/base_layout.twig
@@ -16,9 +16,18 @@
 <body>
 <div class="header">
     <div class="container">
-        <div id="loginpanel" class="col-md-2 col-md-offset-10 col-xs-12">
+        {% if not userLogged %}
+        <div id="loginpanel" class="col-md-4 col-md-offset-10 col-xs-12">
             <a href="/login/">Login</a> or <a href="/signup/">Sign up</a>
         </div>
+        {% endif %}
+
+        {% if userLogged %}
+            <div id="userheader" class="col-md-4 col-md-offset-9 col-xs-12">
+                Welcome, {{ userName }}. (Not you? <a href="/logout/">Logout</a> )<br>
+                <a href="/manage/">Control Panel</a>
+            </div>
+        {% endif %}
     </div>
 </div>
 <div class="container">
