First version of user control panel

--- a/views/manage_layout.twig
+++ b/views/manage_layout.twig
@@ -7,10 +7,10 @@
 {% block maincontent %}
     <div class="row">
         <div class="col-xs-offset-4 col-xs-8" id="managebuttons">
-            <a class="btn {{ page == 'token' ? 'btn-info' : 'btn-default' }}" href="/manage/mytoken/" role="button">Remote token</a>
-            <a class="btn {{ page == 'mypics' ? 'btn-info' : 'btn-default' }}" href="/manage/mypics/" role="button">View my pictures</a>
+            <a class="btn {{ page == 'token' ? 'btn-info' : 'btn-default' }}" href="/manage/mytoken" role="button">Remote token</a>
+            <a class="btn {{ page == 'mypics' ? 'btn-info' : 'btn-default' }}" href="/manage/mypics" role="button">View my pictures</a>
             {% if app.isUserAdmin == true %}
-                <a class="btn {{ page == 'allpics' ? 'btn-info' : 'btn-default' }}" href="/manage/admin/" role="button">View ALL pictures (admin)</a>
+                <a class="btn {{ page == 'allpics' ? 'btn-info' : 'btn-default' }}" href="/manage/admin" role="button">View ALL pictures (admin)</a>
             {% endif %}
         </div>
     </div>
