--- a/views/base_layout.twig
+++ b/views/base_layout.twig
@@ -15,20 +15,18 @@
 </head>
 <body>
 <div class="header">
-    <div class="container">
-        {% if not userLogged %}
-        <div id="loginpanel" class="col-md-4 col-md-offset-10 col-xs-12">
+    {% if not userLogged %}
+        <div id="loginpanel" class="pull-right">
             <a href="/login/">Login</a> or <a href="/signup/">Sign up</a>
         </div>
-        {% endif %}
+    {% endif %}
 
-        {% if userLogged %}
-            <div id="userheader" class="col-md-4 col-md-offset-9 col-xs-12">
-                Welcome, {{ userName }}. (Not you? <a href="/logout/">Logout</a> )<br>
-                <a href="/manage/">Control Panel</a>
-            </div>
-        {% endif %}
-    </div>
+    {% if userLogged %}
+        <div id="userheader" class="pull-right">
+            Welcome, {{ userName }}. (Not you? <a href="/logout/">Logout</a> )<br>
+            <a href="/manage/">Control Panel</a>
+        </div>
+    {% endif %}
 </div>
 <div class="container">
     {% block maincontent %}
