--- a/views/manage_mypics.twig
+++ b/views/manage_mypics.twig
@@ -1,4 +1,29 @@
 {% extends 'manage_layout.twig' %}
 
 {% block managecontent %}
+    {% for row in data.files|batch(4, 'false') %}
+        <div class="row">
+            {% for item in row %}
+                {% if item != 'false' %}
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                        <div class="itembox">
+                            <div class="itembox-img-container">
+                                <div class="itembox-img-container-in">
+                                    <img src="{{ item.getcustomurl }}">
+                                </div>
+                            </div>
+                            <div class="itembox-text">
+                                <span>
+                                    {{ item.getOriginalName }}
+                                </span>
+                                <span>
+                                    {{ item.getDate|date("d/m/Y h:i:s") }}
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                {% endif %}
+            {% endfor %}
+        </div>
+    {% endfor %}
 {% endblock %}
