--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,3 +1,7 @@
+body {
+    background: #f5f5f5;
+ }
+
 .btn-file {
     position: relative;
     overflow: hidden;
@@ -29,7 +33,7 @@
 }
 
 #userheader{
-    margin-right: 10%;
+    margin-right: 5%;
 }
 
 .header{
@@ -48,4 +52,42 @@
 
 .displayimage img {
     width: 250px;
+}
+
+.itembox{
+    background: white;
+    height: 380px;
+    margin: 10px;
+}
+
+
+.itembox-img-container{
+    height: 250px;
+    position:relative;
+}
+
+.itembox-img-container-in{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 15px;
+}
+
+.itembox-img-container-in > img{
+    max-height: 200px;
+    max-width: 100%;
+    vertical-align: middle;
+    display: inline-block;
+}
+
+.itembox-text{
+    margin-left: 15px;
+    font-weight: 600;
+}
+
+.itembox-text > span{
+    position: relative;
+    display: block;
 }
