--- a/views/manage_mypics.twig
+++ b/views/manage_mypics.twig
@@ -1,29 +1,34 @@
 {% extends 'manage_layout.twig' %}
 
 {% block managecontent %}
-    {% for row in data.files|batch(4, 'false') %}
-        <div class="row">
-            {% for item in row %}
-                {% if item != 'false' %}
-                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                        <div class="itembox">
-                            <div class="itembox-img-container">
-                                <div class="itembox-img-container-in">
-                                    <img src="{{ item.getcustomurl }}">
-                                </div>
-                            </div>
-                            <div class="itembox-text">
+    <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-9">
+            {% for row in data.files|batch(3, 'false') %}
+                <div class="row">
+                    {% for item in row %}
+                        {% if item != 'false' %}
+                            <div class="col-sm-6 col-lg-4">
+                                <div class="itembox">
+                                    <div class="itembox-img-container">
+                                        <div class="itembox-img-container-in">
+                                            <img src="{{ item.getcustomurl }}">
+                                        </div>
+                                    </div>
+                                    <div class="itembox-text">
                                 <span>
                                     {{ item.getOriginalName }}
                                 </span>
-                                <span>
+                                        <span>
                                     {{ item.getDate|date("d/m/Y h:i:s") }}
                                 </span>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                {% endif %}
+                        {% endif %}
+                    {% endfor %}
+                </div>
             {% endfor %}
         </div>
-    {% endfor %}
+    </div>
 {% endblock %}
