Initial pagination for user control panel

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -50,6 +50,11 @@ body {
     padding: 20px;
 }
 
+#navpanel{
+    padding: 20px;
+    background-color: white;
+}
+
 .displayimage img {
     width: 250px;
 }
