--- a/views/base_layout.twig
+++ b/views/base_layout.twig
@@ -10,6 +10,7 @@
         <link href="/css/bootstrap.css" rel="stylesheet">
         <link href="/css/bootstrap-theme.css" rel="stylesheet">
         <link href="/css/main.css" rel="stylesheet">
+        <link href="/css/ionicons.min.css" rel="stylesheet">
     {% endblock %}
     <title>{% block title %}{% endblock %}</title>
 </head>
