--- a/views/manage_mypics.twig
+++ b/views/manage_mypics.twig
@@ -2,8 +2,32 @@
 
 {% block managecontent %}
     <div class="row">
-        <div class="col-md-3"></div>
+        <div class="col-md-3">
+            {% if data.dateTree is not empty %}
+                <ul>
+                    {% for year, monthdata in data.dateTree %}
+                        <li>
+                            {{ year }}
+                            <ul>
+                                {% for month, count in monthdata %}
+                                    <li>
+                                        {{ month }} - ({{ count }})
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        </div>
         <div class="col-md-9">
+            {% if data.status == true %}
+                <div class="row">
+                    <div id="navpanel">
+                        <a class="btn btn-default" href="{{ path('manage_mypics', {'before': data.beforeId}) }}"><i class="ion ion-chevron-left"></i></a>
+                        <a class="btn btn-default" href="{{ path('manage_mypics', {'after': data.afterId}) }}"><i class="ion ion-chevron-right"></i></a>
+                    </div>
+                </div>
             {% for row in data.files|batch(3, 'false') %}
                 <div class="row">
                     {% for item in row %}
@@ -29,6 +53,9 @@
                     {% endfor %}
                 </div>
             {% endfor %}
+            {% else %}
+                You have not uploaded anything yet.
+            {% endif %}
         </div>
     </div>
 {% endblock %}
