--- a/views/manage_layout.twig
+++ b/views/manage_layout.twig
@@ -10,7 +10,7 @@
             <a class="btn {{ page == 'token' ? 'btn-info' : 'btn-default' }}" href="/manage/mytoken" role="button">Remote token</a>
             <a class="btn {{ page == 'mypics' ? 'btn-info' : 'btn-default' }}" href="/manage/mypics" role="button">View my pictures</a>
             {% if app.isUserAdmin == true %}
-                <a class="btn {{ page == 'allpics' ? 'btn-info' : 'btn-default' }}" href="/manage/admin" role="button">View ALL pictures (admin)</a>
+                <a class="btn {{ page == 'adminusers' ? 'btn-info' : 'btn-default' }}" href="/manage/admin/users" role="button">Admin control panel</a>
             {% endif %}
         </div>
     </div>
