Added home link to header

--- a/views/base_layout.twig
+++ b/views/base_layout.twig
@@ -16,6 +16,9 @@
 </head>
 <body>
 <div class="header">
+        <div id="header-home" class="pull-left">
+            <a href="/">Home</a>
+        </div>
     {% if userLogged is defined %}
     {% if not userLogged %}
         <div id="loginpanel" class="pull-right">
