Added a slightly better upload results page for web interface

--- a/views/base_layout.twig
+++ b/views/base_layout.twig
@@ -45,6 +45,8 @@
 {% block javascripts %}
     <script src="/js/jquery-3.1.1.min.js"></script>
     <script src="/js/bootstrap.js"></script>
+    <script src="/js/clipboard.min.js"></script>
+    <script src="/js/main.js"></script>
 {% endblock %}
 </body>
 </html>
