--- a/web/css/main.css
+++ b/web/css/main.css
@@ -115,3 +115,12 @@ body {
     margin-left: 15px;
     margin-top: 9px;
 }
+
+.uploadControls{
+    display: inline-block;
+}
+
+#uploadResult{
+    width: auto;
+    min-width: 238px;
+}
