--- a/views/base_layout.twig
+++ b/views/base_layout.twig
@@ -11,6 +11,7 @@
         <link href="/css/bootstrap-theme.css" rel="stylesheet">
         <link href="/css/main.css" rel="stylesheet">
         <link href="/css/ionicons.min.css" rel="stylesheet">
+        <link rel="icon" type="image/png" href="/static/favicon.png">
     {% endblock %}
     <title>{% block title %}{% endblock %}</title>
 </head>
