initial dropzone uploader

--- a/views/uploadresult.twig
+++ b/views/uploadresult.twig
@@ -11,7 +11,7 @@
                 {% if success == true %}
 
                     <input class="form-control uploadControls" id="uploadResult" title="Here's your file!" value="{{ link }}">
-                    <button id="clipboardbtn" class="btn btn-default uploadControls" data-clipboard-target="#uploadResult">
+                    <button id="clipboardbtn" class="btn btn-success uploadControls clipbutton" data-clipboard-target="#uploadResult">
                         <img src="/static/clippy.svg" alt="Copy to clipboard" width="15">
                     </button>
 
