--- a/views/homepage.twig
+++ b/views/homepage.twig
@@ -4,9 +4,15 @@
     MeowUpload - home
 {% endblock %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link href="/css/dropzone.css" rel="stylesheet">
+    <link href="/css/basic.css" rel="stylesheet">
+{% endblock %}
+
 {% block maincontent %}
     <div id="uploader">
-        <div class="row">
+        <div class="row" id="upload-legacy">
             <div class="col-md-6 col-md-offset-4 col-xs-12">
                 <h2>Upload your file (100Mb max)</h2>
                 <form class="form-inline" action="/getfile/" method="post" enctype="multipart/form-data">
@@ -15,6 +21,12 @@
                     </label>
                     <input type="submit" value="Upload" class="btn btn-primary">
                 </form>
+            </div>
+        </div>
+        <div class="row" id="upload-dropzone" style="display:none">
+            <div class="col-md-6 col-md-offset-4 col-xs-12">
+                <h2>Drag or open up to 4 files (100 mb max)</h2>
+                <div class="dropzone" id="dropzonefield"></div>
             </div>
         </div>
         <div class="row">
@@ -28,4 +40,28 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="/js/dropzone.js"></script>
+    <script>
+        Dropzone.autoDiscover = false;
+        $(function(){
+            var dz = new Dropzone('div#dropzonefield', {
+                url: '/endpoint/dropzone/',
+                paramName: 'meowfile',
+                maxFileSize: 100,
+                maxFiles: 4
+            });
+            dz.on("success", function(file, reply){
+                console.log(reply);
+                if(reply.success) {
+                    $(file.previewTemplate).append(
+                        $('<button class="btn btn-default clipbutton" data-clipboard-text="'+reply.download+'">Copy URL</button>')
+                    );
+                }
+            });
+        });
+    </script>
 {% endblock %}
